--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,4 +5,16 @@
   width: auto;
   font-size: calc(10px + 2vmin);
   color: white;
+  &__profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &__avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+    
+  }
 }
