Dates fixed for due or overdue vocabs - status update added

--- a/src/components/NeedsReviewBox/NeedsReviewBox.scss
+++ b/src/components/NeedsReviewBox/NeedsReviewBox.scss
@@ -1,3 +1,8 @@
+@import "../../styles/fonts";
+@import "../../styles/global";
+@import "../../styles/mixins";
+@import "../../styles/variables";
+
 .needs-review-box {
     height: 100vh;
     display: flex;
