--- a/src/pages/SingleBox/SingleBox.scss
+++ b/src/pages/SingleBox/SingleBox.scss
@@ -1,3 +1,8 @@
+@import "../../styles/fonts";
+@import "../../styles/global";
+@import "../../styles/mixins";
+@import "../../styles/variables";
+
 .review-box {
     display: flex;
     width: 70vw;
