added some features like spinning during gpt call

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@
   justify-content: start;
   background-image: linear-gradient(to bottom,$background_gradient1 ,$background_gradient2); 
   padding: 1rem;
-  width: 30vw;
+  width: 30%;
   height: 100vh;
 
   .logo {
