--- a/src/components/MainBottom/MainBottom.scss
+++ b/src/components/MainBottom/MainBottom.scss
@@ -8,7 +8,7 @@
 
 .card-container .card {
     flex: 0 0 calc(33.33% - 20px);
-    width: calc(33.33% - 20px);
+    // width: calc(33.33% - 20px);
     padding: 20px;
     border-radius: 50px 0;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
