--- a/src/components/NeedsReviewBox/NeedsReviewBox.scss
+++ b/src/components/NeedsReviewBox/NeedsReviewBox.scss
@@ -4,7 +4,8 @@
 @import "../../styles/variables";
 
 .needs-review-box {
-    height: 100vh;
+    height: 80vh;
+    width: 50%;
     display: flex;
     flex-direction: column;
   
