--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,3 +19,6 @@ $supporting-color1: #158463; // Green - "In Stock" label
 $supporting-color2: #c94515;
 $background_gradient1: #6e8fe9; // Red - "Out of Stock" label, error states & delete icon
 $background_gradient2: #b876f1; // Red - "Out of Stock" label, error states & delete icon
+$background_gradient3: #CEEDDE; // Red - "Out of Stock" label, error states & delete icon
+$background_gradient3: #CEEDDE;
+$background_gradient4: #F8CDCD; 
