--- a/src/components/WordGenerator/WordGenerator.scss
+++ b/src/components/WordGenerator/WordGenerator.scss
@@ -1,47 +1,122 @@
+@import "../../styles/fonts";
+@import "../../styles/global";
+@import "../../styles/mixins";
+@import "../../styles/variables";
 
 .word-generator {
-    padding: 0 1rem;
-    height: 70vh;
-    width: 50%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  
-    .generate-button, .learn-button {
-      padding: 10px 20px 10px;
-      margin-bottom: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #4CAF50;
+  position: relative; // Added to make the loader position correctly
+  padding: 0 1rem;
+  height: 70vh;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+  .generate-button {
+    padding: 10px 20px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: $background_gradient2;
+    color: white;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #45a049;
+    }
+  }
+
+  .learn-button {
+    padding: 10px 20px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    background-image: linear-gradient(
+      to right,
+      $background_gradient1,
+      $primary-dark
+    );
+    color: white;
+    cursor: pointer;
+
+    &:hover {
+      background-image: linear-gradient(
+        to right,
+        $background_gradient2,
+        $primary-purple
+      );
+    }
+  }
+
+  .word-container {
+    flex: 1;
+    overflow-y: auto;
+  }
+
+  .word-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th,
+    td {
+      padding: 15px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: $background_gradient1;
       color: white;
-      cursor: pointer;
-  
-      &:hover {
-        background-color: #45a049;
-      }
+      position: sticky;
+      top: 0;
     }
-  
-    .word-container {
-        flex: 1;
-        overflow-y: auto;
-      }
-    
-      .word-table {
-        width: 100%;
-        border-collapse: collapse;
-    
-        th, td {
-          padding: 15px;
-          text-align: left;
-          border-bottom: 1px solid #ddd;
-        }
-    
-        th {
-          background-color: #4CAF50;
-          color: white;
-          position: sticky;
-          top: 0;
-        }
-      }
-    }
-  
+  }
+
+  // Added styles for the modal
+  .modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+
+  }
+
+  .loader-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.popup {
+  background-color: $background_gradient1;
+  border: none;
+  font-size: 1rem;
+  width: 5rem;
+  padding: 0.5rem;
+  color: $background-light;
+  border-radius: .3125rem;
+}
