--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,20 +1,5 @@
-.home {
+.mainHome {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: auto;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  &__profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    &__avatar {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-    }
-    
-  }
+  flex-direction: column;
+  width: 60%;
 }
