--- a/src/pages/SingleVocab/SingleVocab.scss
+++ b/src/pages/SingleVocab/SingleVocab.scss
@@ -15,8 +15,12 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   background-color: white;
+  
 }
 
+.single-vocab-container {
+  display: flex;
+}
 .carousel-text {
   margin: 20px 0;
   text-align: center;
