--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,3 +7,14 @@
   list-style-type: none;
   text-decoration: none;
 }
+.container-all {
+  display: flex;
+  flex-direction: row;
+  max-height: 100vh;
+}
+
+.container-inner {
+  padding: 2rem 2rem;
+  width: 100%;
+  height: 100%;
+}
