--- a/src/components/MainTop/MainTop.scss
+++ b/src/components/MainTop/MainTop.scss
@@ -4,11 +4,11 @@
 @import "../../styles/variables";
 .main-top {
     display: flex;
-    margin: 2rem 0 5rem 0;
+    margin: 0 0 5rem 0;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 2rem 0;
+    padding: 5rem 0;
     border-radius: 1rem;
     background-color: $background_gradient3;
 
