--- a/src/components/WordGenerator/WordGenerator.scss
+++ b/src/components/WordGenerator/WordGenerator.scss
@@ -19,10 +19,12 @@
     border-radius: 5px;
     background-color: $background_gradient2;
     color: white;
+    font-size: 2rem;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: #45a049;
+      background-color: $background_gradient1;
     }
   }
 
